[package]
name = "Authenticate-Users"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.32"
diesel = { version = "^1.1.0", features = ["sqlite", "r2d2"] }
env_logger = "0.6"
failure = "0.1"
log = "0.4"
r2d2 = "0.8"
rouille = "2.2"
rust-crypto = "0.2"
serde = "1.0"
serde_derive = "1.0"
uuid = { version = "0.5", features = ["serde", "v4"] }